--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
   <script src="js/map-styles.min.js"></script>
   <script src="js/main.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBruNstIs9UwbPaZJ_wTucq5kcvhpefY2M&libraries=places&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBruNstIs9UwbPaZJ_wTucq5kcvhpefY2M&libraries=places&callback=initGoogleMapsAPI"
   async defer></script>
+
+  <script>
+    function initGoogleMapsAPI() {
+      revealingModule.initMap();
+    }
+  </script>
 </body>
 </html>
